added info for picture sizing editor options

--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -68,13 +68,13 @@
         </div>
 
         <!-- ko if: sourceKey() -->
-        <label class="form-label">
-            <span class="help"></span>Background picture sizing
-        </label>
+        <label class="form-label">Background picture sizing</label>
         <div class="form-group">
+            <button class="btn info-icon-btn" type="button" data-bind="infoMessageToggle: 'Fit the image in the view'"></button>
             <label class="form-label">
                 <input name="size" type="radio" value="contain" data-bind="checked: size" />Contain
             </label>
+            <button class="btn info-icon-btn" type="button" data-bind="infoMessageToggle: 'Fill the view with the image'"></button>
             <label class="form-label">
                 <input name="size" type="radio" value="cover" data-bind="checked: size" />Cover
             </label>
