--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -6,7 +6,7 @@
         </label>
         <div id="miscellaneousCollapse" class="collapse form-group-collapse">
             <div class="form-group">
-                <button class="btn info-icon-btn" type="button" data-bind="infoMessageToggle: 'Name that will be used as reference in other elements'"></button>
+                <button class="btn btn-info" type="button" data-bind="infoMessageToggle: 'Name of the style'"></button>
                 <label>Style name</label>
                 <input type="text" class="form-control" spellcheck="false" data-bind="textInput: styleName">
             </div>
