--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -1,8 +1,8 @@
 <div class="form-group form-group-collapsible">
-    <button class="btn info-icon-btn" type="button" data-bind="infoMessageToggle: 'Manage font settings inside an element'"></button>
     <label class="form-label">
         <a href="#" class="form-group-toggle" data-bind="collapse: '#typographyCollapse'"></a>
         <b>Typography</b>
+        <button class="btn btn-info" type="button" data-bind="infoMessageToggle: 'Manage text appearance'"></button>
     </label>
 
     <div id="typographyCollapse" class="collapse form-group-collapse">
