--- a/src/workshops/colors/colorEditor.html
+++ b/src/workshops/colors/colorEditor.html
@@ -1,6 +1,6 @@
 <div class="form">
     <div class="form-group">
-        <button class="btn info-icon-btn" type="button" data-bind="infoMessageToggle: 'Name that will be used as reference in other elements'"></button>
+        <button class="btn btn-info" type="button" data-bind="infoMessageToggle: 'Name of the color'"></button>
         <label>Color name</label>
         <input type="text" class="form-control" spellcheck="false" data-bind="textInput: colorName">
     </div>
