--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -70,7 +70,7 @@
         <!-- ko if: sourceKey() -->
         <label class="form-label">
             Background picture sizing
-            <button class="btn btn-info" type="button" data-bind="infoMessageToggle: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Rezise the background image to make sure the image is fully visible.</p>'"></button>
+            <button class="btn btn-info" type="button" data-bind="infoMessageToggle: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
         </label>
         <div class="form-group">
             <label class="form-label">
