renamed style guide

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -1,4 +1,4 @@
-<div class="living-style-guide container" data-bind="if: styles">
+<div class="style-guide container" data-bind="if: styles">
     <!-- ko with: styles -->
     <article>
         <h2 class="heading">Fonts</h2>
