--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -145,7 +145,7 @@
         <div class="samples">
             <!-- ko foreach: { data: $component.colors, as: 'color' } -->
             <div class="sample style-card" data-bind="stylable: color">
-                <a href="#" class="sample-color"
+                <a href="#" class="style-card-round"
                     data-bind="attr: { title: color.displayName }, style: { background: color.value }"></a>
                 <span class="style-card-label" data-bind="text: color.displayName"></span>
             </div>
@@ -156,6 +156,32 @@
                     Add color
                 </div>
             </div>
+        </div>
+    </article>
+
+    <article>
+        <h2 class="heading">Gradients</h2>
+        <div class="samples">
+            <!-- ko foreach: { data: $component.gradients, as: 'gradient' } -->
+            <div class="sample style-card" data-bind="stylable: gradient">
+                <style data-bind="gradientPreview: gradient"></style>
+                <div class="style-card-round" data-bind="css: gradient.key"></div>
+                <span class="style-card-label" data-bind="text: gradient.displayName"></span>
+            </div>
+            <!--/ko -->
+        </div>
+    </article>
+
+    <article>
+        <h2 class="heading">Shadows</h2>
+        <div class="samples">
+            <!-- ko foreach: { data: $component.shadows, as: 'shadow' } -->
+            <div class="sample style-card" data-bind="stylable: shadow">
+                <style data-bind="shadowPreview: shadow"></style>
+                <div class="style-card-square" data-bind="css: shadow.key"></div>
+                <span class="style-card-label" data-bind="text: shadow.displayName"></span>
+            </div>
+            <!--/ko -->
         </div>
     </article>
 
