added text decoration options

--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -71,5 +71,10 @@
             <label for="textTransform">Transform</label>
             <select id="textTransform" class="form-control" data-bind="options: textTransformOptions, optionsValue: 'value', optionsText: 'text', value: $component.textTransform"></select>
         </div>
+
+        <div class="form-group">
+            <label for="textDecoration">Decoration</label>
+            <select id="textDecoration" class="form-control" data-bind="options: textDecorationOptions, optionsValue: 'value', optionsText: 'text', value: $component.textDecoration"></select>
+        </div>
     </div>
 </div>
