--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -300,6 +300,26 @@
     </article>
 
     <article>
+        <h2 class="heading">Picture</h2>
+        <div class="row">
+            <!--ko foreach: { data: $component.pictures, as: 'picture' }-->
+            <div class="col col-md-4 style-picture" data-bind="stylable: picture">
+                <div class="style-card-body">
+                    <img data-bind="styled: picture" />
+                </div>
+                <span class="style-card-label" data-bind="text: picture.displayName"></span>
+            </div>
+            <!--/ko-->
+            <div class="style-picture style-picture-empty">
+                <button class="btn-round" data-bind="click: $component.addpictureVariation"></button>
+                <div class="style-picture-label">
+                    Add variation
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <article>
         <h2 class="heading">Cards</h2>
         <div class="row">
             <!--ko foreach: { data: $component.cards, as: 'card' }-->
