added box border styles

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -147,6 +147,7 @@
             <div class="sample style-card" data-bind="stylable: color">
                 <a href="#" class="style-card-round"
                     data-bind="attr: { title: color.displayName }, style: { background: color.value }"></a>
+                <span class="style-card-label text-uppercase" data-bind="text: color.value"></span>
                 <span class="style-card-label" data-bind="text: color.displayName"></span>
             </div>
             <!--/ko -->
