--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="tab" data-bind="css: { 'tab-is-active': colorKey }" title="Background color">
-                <a href="#" data-bind="balloon: { component: { name: 'color-selector', params: { onSelect: $component.onColorSelected, selectedColor: $component.colorKey } } }">
+                <a href="#" data-bind="balloon: { component: { name: 'color-selector', params: { onSelect: $component.onColorSelected, selectedColor: $component.color } } }">
                     <i class="paperbits-icon paperbits-paint-bucket-40"></i>
                 </a>
             </div>
