--- a/src/workshops/boxes/boxEditor.html
+++ b/src/workshops/boxes/boxEditor.html
@@ -2,35 +2,35 @@
     <div class="form-group form-group-collapsible">
         <label class="form-label">
             <a href="#" class="form-group-toggle" data-bind="collapse: '#paddingCollapse'"></a>
-            <b>Sizing</b>
+            <b>Box</b>
         </label>
         <div id="paddingCollapse" class="collapse form-group-collapse">
             <div class="box-model">
                 <div class="box-model-margin">
                     <span class="box-model-label">margin</span>
-                    <input type="text" class="box-model-control box-model-control-top" data-bind="textInput: marginTop">
-                    <input type="text" class="box-model-control box-model-control-left" data-bind="textInput: marginLeft">
-                    <input type="text" class="box-model-control box-model-control-right" data-bind="textInput: marginRight">
-                    <input type="text" class="box-model-control box-model-control-bottom" data-bind="textInput: marginBottom">
+                    <input type="text" class="box-model-control box-model-control-top" placeholder="-" data-bind="textInput: marginTop">
+                    <input type="text" class="box-model-control box-model-control-left" placeholder="-" data-bind="textInput: marginLeft">
+                    <input type="text" class="box-model-control box-model-control-right" placeholder="-" data-bind="textInput: marginRight">
+                    <input type="text" class="box-model-control box-model-control-bottom" placeholder="-" data-bind="textInput: marginBottom">
                     
                     <div class="box-model-border">
                         <span class="box-model-label">border</span>
-                        <input type="text" class="box-model-control box-model-control-top" data-bind="textInput: borderTop">
-                        <input type="text" class="box-model-control box-model-control-left" data-bind="textInput: borderLeft">
-                        <input type="text" class="box-model-control box-model-control-right" data-bind="textInput: borderRight">
-                        <input type="text" class="box-model-control box-model-control-bottom" data-bind="textInput: borderBottom">
+                        <input type="text" class="box-model-control box-model-control-top" placeholder="-" data-bind="textInput: borderTopWidth, balloon: { component: { name: 'border-editor', params: { onChange: $component.borderTop, borderStyle: $component.borderTop } } }">
+                        <input type="text" class="box-model-control box-model-control-left" placeholder="-" data-bind="textInput: borderLeftWidth, balloon: { component: { name: 'border-editor', params: { onChange: $component.borderLeft, borderStyle: $component.borderLeft } } }">
+                        <input type="text" class="box-model-control box-model-control-right" placeholder="-" data-bind="textInput: borderRightWidth, balloon: { component: { name: 'border-editor', params: { onChange: $component.borderRight, borderStyle: $component.borderRight } } }">
+                        <input type="text" class="box-model-control box-model-control-bottom" placeholder="-" data-bind="textInput: borderBottomWidth, balloon: { component: { name: 'border-editor', params: { onChange: $component.borderBottom, borderStyle: $component.borderBottom } } }">
 
-                        <input type="text" class="box-model-control box-model-control-top-left" data-bind="textInput: topLeftRadius">
-                        <input type="text" class="box-model-control box-model-control-top-right" data-bind="textInput: topRightRadius">
-                        <input type="text" class="box-model-control box-model-control-bottom-left" data-bind="textInput: bottomLeftRadius">
-                        <input type="text" class="box-model-control box-model-control-bottom-right" data-bind="textInput: bottomRightRadius">
+                        <input type="text" class="box-model-control box-model-control-top-left" placeholder="-" data-bind="textInput: topLeftRadius">
+                        <input type="text" class="box-model-control box-model-control-top-right" placeholder="-" data-bind="textInput: topRightRadius">
+                        <input type="text" class="box-model-control box-model-control-bottom-left" placeholder="-" data-bind="textInput: bottomLeftRadius">
+                        <input type="text" class="box-model-control box-model-control-bottom-right" placeholder="-" data-bind="textInput: bottomRightRadius">
 
                         <div class="box-model-padding">
                             <span class="box-model-label">padding</span>
-                            <input type="text" class="box-model-control box-model-control-top" data-bind="textInput: paddingTop">
-                            <input type="text" class="box-model-control box-model-control-left" data-bind="textInput: paddingLeft">
-                            <input type="text" class="box-model-control box-model-control-right" data-bind="textInput: paddingRight">
-                            <input type="text" class="box-model-control box-model-control-bottom" data-bind="textInput: paddingBottom">
+                            <input type="text" class="box-model-control box-model-control-top" placeholder="-" data-bind="textInput: paddingTop">
+                            <input type="text" class="box-model-control box-model-control-left" placeholder="-" data-bind="textInput: paddingLeft">
+                            <input type="text" class="box-model-control box-model-control-right" placeholder="-" data-bind="textInput: paddingRight">
+                            <input type="text" class="box-model-control box-model-control-bottom" placeholder="-" data-bind="textInput: paddingBottom">
                             <div class="box-model-content">
                                 content
                             </div>
