added support body variations

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -26,9 +26,9 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="font-primary">
-                    <div class="font-sample style-card" data-bind="stylable: globals.body">
+                    <div class="font-sample style-card" data-bind="stylable: globals.body.default">
                         <div class="style-card-body">
-                            <span data-bind="styled: globals.body">
+                            <span data-bind="styled: globals.body.default">
                                 Abc
                             </span>
                         </div>
@@ -40,38 +40,38 @@
         <div class="row">
             <div class="col-md-6">
                 <article>
-                    <div class="style-card" data-bind="stylable: globals.h1">
+                    <div class="style-card" data-bind="stylable: globals.h1.default">
                         <div class="style-card-body">
-                            <h1 data-bind="styled: globals.h1">Heading level 1</h1>
+                            <h1 data-bind="styled: globals.h1.default">Heading level 1</h1>
                         </div>
                     </div>
-                    <div class="style-card" data-bind="stylable: globals.h2">
+                    <div class="style-card" data-bind="stylable: globals.h2.default">
                         <div class="style-card-body">
-                            <h2 data-bind="styled: globals.h2">Heading level 2</h2>
-                        </div>
-                    </div>
-
-                    <div class="style-card" data-bind="stylable: globals.h3">
-                        <div class="style-card-body">
-                            <h3 data-bind="styled: globals.h3">Heading level 3</h3>
+                            <h2 data-bind="styled: globals.h2.default">Heading level 2</h2>
                         </div>
                     </div>
 
-                    <div class="style-card" data-bind="stylable: globals.h4">
+                    <div class="style-card" data-bind="stylable: globals.h3.default">
                         <div class="style-card-body">
-                            <h4 data-bind="styled: globals.h4">Heading level 4</h4>
+                            <h3 data-bind="styled: globals.h3.default">Heading level 3</h3>
                         </div>
                     </div>
 
-                    <div class="style-card" data-bind="stylable: globals.h5">
+                    <div class="style-card" data-bind="stylable: globals.h4.default">
                         <div class="style-card-body">
-                            <h5 data-bind="styled: globals.h5">Heading level 5</h5>
+                            <h4 data-bind="styled: globals.h4.default">Heading level 4</h4>
                         </div>
                     </div>
 
-                    <div class="style-card" data-bind="stylable: globals.h5">
+                    <div class="style-card" data-bind="stylable: globals.h5.default">
                         <div class="style-card-body">
-                            <h6 data-bind="styled: globals.h6">Heading level 6</h6>
+                            <h5 data-bind="styled: globals.h5.default">Heading level 5</h5>
+                        </div>
+                    </div>
+
+                    <div class="style-card" data-bind="stylable: globals.h5.default">
+                        <div class="style-card-body">
+                            <h6 data-bind="styled: globals.h6.default">Heading level 6</h6>
                         </div>
                     </div>
                 </article>
@@ -79,9 +79,9 @@
 
             <div class="col">
                 <article>
-                    <div class="style-card" data-bind="stylable: globals.p">
+                    <div class="style-card" data-bind="stylable: globals.p.default">
                         <div class="style-card-body">
-                            <p data-bind="styled: globals.p">
+                            <p data-bind="styled: globals.p.default">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt
                                 ut
@@ -98,17 +98,17 @@
                 </article>
 
                 <article>
-                    <div class="style-card" data-bind="stylable: globals.a">
+                    <div class="style-card" data-bind="stylable: globals.a.default">
                         <div class="style-card-body">
-                            <a href="#" data-bind="styled: globals.a">Regular link</a>
+                            <a href="#" data-bind="styled: globals.a.default">Regular link</a>
                         </div>
                     </div>
                 </article>
 
                 <article>
-                    <div class="style-card" data-bind="stylable: globals.blockquote">
+                    <div class="style-card" data-bind="stylable: globals.blockquote.default">
                         <div class="style-card-body">
-                            <blockquote data-bind="styled: globals.blockquote">
+                            <blockquote data-bind="styled: globals.blockquote.default">
                                 Typography is the craft of endowing human language with a durable visual form. <br />
                                 - Robert Bringhurst
                             </blockquote>
