--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -24,14 +24,23 @@
     <article>
         <h2 class="heading">Typography</h2>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col col-md-12 samples">
+                <!--ko foreach: { data: $component.bodyFonts, as: 'bodyFont' }-->
                 <div class="font-primary">
-                    <div class="font-sample style-card" data-bind="stylable: globals.body.default">
+                    <div class="font-sample style-card" data-bind="stylable: bodyFont">
                         <div class="style-card-body">
-                            <span data-bind="styled: globals.body.default">
+                            <span data-bind="styled: bodyFont">
                                 Abc
                             </span>
+                            <span class="style-card-label" data-bind="text: bodyFont.displayName"></span>
                         </div>
+                    </div>
+                </div>
+                <!--/ko-->
+                <div class="style-card style-card-empty">
+                    <button class="btn-round" data-bind="click: $component.addBodyFontVariation"></button>
+                    <div class="style-card-label">
+                        Add variation
                     </div>
                 </div>
             </div>
